UI: Show border around views when there isnt sufficient contrast
(integrated from master branch change 9.2.1-1433-g1ee4af1 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/normalize.less
+++ b/src/chrome/komodo/skin/global/normalize.less
@@ -683,6 +683,11 @@ dialog:root,
         {
             background: lighten(@background, 5%);
         }
+        
+        view
+        {
+            border: 1px solid @border;
+        }
     }
     
     menupopup
