UI: padding on span should not be in normalize
(integrated from master branch change 9.2.1-1434-g24089bc by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/normalize.less
+++ b/src/chrome/komodo/skin/global/normalize.less
@@ -30,7 +30,7 @@ label, description, button, toolbarbutton, textbox, span
 }
 
 description, listitem, richlistitem, label[id], treecol label, listheader,
-checkbox, radio, span
+checkbox, radio
 {
     padding: 0.2rem 4px;
 }
