UI: Recover icons on bottom pane
(integrated from master branch change 9.2.1-1442-g0ab7ab7 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/icons.less
+++ b/src/chrome/komodo/skin/global/icons.less
@@ -225,6 +225,7 @@ tab[widget="terminal-widget"] { .icon(); .icon-terminal(); }
 tab[widget^="debugsession"]:not([dbg_status="interactive"]) { .icon(); .icon-play(); }
 tab[widget^="debugsession"][dbg_status="interactive"] { .icon(); .icon-play-circle(); }
 tab[widget^="findresults_tabpanel"] { .icon(); .icon-binoculars(); }
+tab[widget^="klint_tabpanel"] { .icon(); .icon-circle-code(); }
 
 /* Breakpoints */
 .breakpoint-new-icon > .box-inherit
