--- a/src/chrome/komodo/skin/global/main.less
+++ b/src/chrome/komodo/skin/global/main.less
@@ -434,7 +434,8 @@ ko-pane[type="icons"] tab
     }
 }
 
-ko-pane:not([type="icons"]) tab:before
+#workspace_left_area:not([type="icons"]) tab:before,
+#workspace_right_area:not([type="icons"]) tab:before
 {
     display: none;
     visibility: collapse;
