Notify: Fix button icons
(integrated from master branch change 9.2.1-1443-gce5268b by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/modules/notify/skin/notify.less
+++ b/src/modules/notify/skin/notify.less
@@ -80,11 +80,12 @@
         border: 0 !important;
         min-height: 0 !important;
         min-width: 0 !important;
-        width: 16px;
-        height: 16px;
-        max-width: 16px;
+        width: 14px;
+        height: 14px;
+        max-width: 14px;
         cursor: pointer;
         background-size: contain;
+        background-repeat: no-repeat;
 
         dropmarker
         {
