quickstart: spread icons and label apart
(integrated from master branch change bacfe3c by Carey Hoffman <cgchoffman@gmail.com>)

--- a/src/chrome/komodo/skin/global/main.less
+++ b/src/chrome/komodo/skin/global/main.less
@@ -516,14 +516,13 @@ ko-pane[type="vertical"]
 
 vbox[anonid="quickstart"] .inner > button
 {
-    width: 200px;
+    width: 210px;
     height: 25px;
-    padding-bottom: 2px;
-    margin: 3px;
+    padding: 4px 6px;
     
     .box-inherit
     {
-        width: 133px;
+        width: 160px; 
     }
 }
 
