Quickstart: center text of buttons
(integrated from master branch change c803505 by Carey Hoffman <cgchoffman@gmail.com>)

--- a/src/chrome/komodo/skin/global/main.less
+++ b/src/chrome/komodo/skin/global/main.less
@@ -522,7 +522,12 @@ vbox[anonid="quickstart"] .inner > button
     
     .box-inherit
     {
-        width: 160px; 
+        width: 165px; 
+    }
+    
+    label
+    {
+        padding-left: 14px; // width of dropmarker
     }
 }
 
