UI: Fix wizard bindings being overwritten
(integrated from master branch change 9.2.1-1454-g292af28 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/bindings.less
+++ b/src/chrome/komodo/skin/global/bindings.less
@@ -28,6 +28,11 @@ wizard[deferred]
   -moz-binding: url("chrome://komodo/content/bindings/wizard.xml#wizard");
 }
 
+wizard:root
+{
+  -moz-binding: url("chrome://global/content/bindings/wizard.xml#wizard");
+}
+
 #toolbox_main {
   -moz-binding: url("chrome://komodo/content/bindings/toolbar.xml#toolbox-drag");
 }
