UI: Fix catalog listing not having checkboxes - fixes #1252
Note this is an improper fix, but I cannot afford the time right now to
dig for hours on end to find out why XUL trees are freaking retarded

(integrated from master branch change 9.2.1-1457-gf3d9a88 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/icons.less
+++ b/src/chrome/komodo/skin/global/icons.less
@@ -405,6 +405,25 @@ treechildren::-moz-tree-twisty(open) {
     background-image: url("koicon://ko-svg/chrome/komodo/skin/images/trees/twisty-down.svg?size=14&color=@{escaped-icons}");
 }
 
+treechildren::-moz-tree-checkbox,
+treechildren::-moz-tree-cell(checkbox) {
+    background-image: url("koicon://ko-svg/chrome/fontawesome/skin/square.svg?size=16") !important;
+    background-size: 16px;
+    background-repeat: no-repeat;
+}
+
+treechildren::-moz-tree-checkbox(checked),
+treechildren::-moz-tree-cell(checkbox, checked) {
+    background-image: url("koicon://ko-svg/chrome/fontawesome/skin/check-square.svg?size=16") !important;
+    background-size: 16px;
+    background-repeat: no-repeat;
+}
+
+treechildren::-moz-tree-checkbox(disabled)
+{
+    opacity: 0.25;
+}
+
 dropmarker {
     .icon();
     .icon-down-tiny();
