StartupWizard: Clarify classic mode - fixes #1338
(integrated from master branch change 9.2.1-1504-g7d19a58 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/normalize.less
+++ b/src/chrome/komodo/skin/global/normalize.less
@@ -29,6 +29,14 @@ label, description, button, toolbarbutton, textbox, span
     line-height: 1.5rem;
 }
 
+label, description, span
+{
+    &.description
+    {
+        opacity: 0.6;
+    }
+}
+
 description, listitem, richlistitem, label[id], treecol label, listheader,
 checkbox, radio
 {
