UI: Fix js console cursor sits below terminal char - fixes #1195
(integrated from master branch change 9.2.1-1514-gfccf420 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/modules/console/content/less/console.less
+++ b/src/modules/console/content/less/console.less
@@ -223,6 +223,7 @@ ul, li
         
         &:before
         {
+            float: left;
             vertical-align: top;
             content: '> ';
             color: @state-ok;
