UX: Implement our own version of window maximize/restore for Windows - fixes #1329 Due to https://bugzilla.mozilla.org/show_bug.cgi?id=321595
(integrated from master branch change 9.2.1-1517-g795cc85 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/chromeless.less
+++ b/src/chrome/komodo/skin/global/chromeless.less
@@ -48,6 +48,15 @@ dialog:root[_hidechrome="true"]:not(.embedded)
             width: 90px;
         }
     }
+    
+    &[_sizemode="maximized"],
+    &[sizemode="maximized"]
+    {
+        resizer
+        {
+            visibility: collapse;
+        }
+    }
 }
 
 dialog #windowButtons .icon-plus-circle2,
@@ -74,7 +83,8 @@ dialog:not([_hidechrome="true"]):not(.embedded)
 
 #komodo_main[_hidechrome="true"]
 {
-    #toolbox_main #main-toolboxrow-wrapper
+    &:not([_sizemode="maximized"]) #toolbox_main #main-toolboxrow-wrapper,
+    &:not([sizemode="maximized"]) #toolbox_main #main-toolboxrow-wrapper
     {
         padding-top: 0;
     }
@@ -112,6 +122,15 @@ dialog:not([_hidechrome="true"]):not(.embedded)
     }
     
     /* Main window resizers */
+    
+    &[_sizemode="maximized"],
+    &[sizemode="maximized"]
+    {
+        resizer
+        {
+            visibility: collapse;
+        }
+    }
     
     /**
      * Top resizer. We do not support top left or top right.
