UI: Fix buggy window resizing
(integrated from master branch change 9.2.1-1519-g4ad7e01 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/classic.toolbar.less
+++ b/src/chrome/komodo/skin/global/classic.toolbar.less
@@ -24,6 +24,12 @@
         -moz-box-ordinal-group: 2;
         -moz-box-flex: 1;
         -moz-box-pack: end !important;
+        
+        #notification-widget
+        {
+            min-width: 250px;
+            max-width: 350px;
+        }
     }
     
     #unifiedMenuButton
@@ -38,7 +44,7 @@
     
     #notification-widget #notification-widget-textbox
     {
-        height: auto !important;
+        height: 26px !important;
     }
     
     #main-toolboxrow-wrapper .overflow-toolbaritem
