scheme: skin xul text fields fixes #1345
(integrated from master branch change 225af85 by Carey Hoffman <cgchoffman@gmail.com>)

--- a/src/chrome/komodo/skin/global/global.less
+++ b/src/chrome/komodo/skin/global/global.less
@@ -102,3 +102,16 @@
 {
     .spinner(@special);
 }
+
+
+// All XUL text fields
+::-moz-selection
+{
+    color: @foreground-special;
+    background: @secondary-special;
+}
+::selection
+{
+    color: @foreground-special;
+    background: @secondary-special;
+}
