schemes: only skin one text element type
(integrated from master branch change 5316aa7 by Carey Hoffman <cgchoffman@gmail.com>)

--- a/src/chrome/komodo/skin/global/global.less
+++ b/src/chrome/komodo/skin/global/global.less
@@ -104,13 +104,8 @@
 }
 
 
-// All XUL text fields
+// All text fields
 ::-moz-selection
-{
-    color: @foreground-special;
-    background: @secondary-special;
-}
-::selection
 {
     color: @foreground-special;
     background: @secondary-special;
