UI: Use chromemargin to hide the window borders on Windows - fixes #1134 fixes #1127
(integrated from master branch change 9.2.1-1525-g564dd52 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/chromeless.less
+++ b/src/chrome/komodo/skin/global/chromeless.less
@@ -81,10 +81,19 @@ dialog:not([_hidechrome="true"]):not(.embedded)
 
 /* Main window with hidden chrome */
 
+#komodo_main[_hidechrome="true"][os-name="Windows_NT"][sizemode="maximized"],
+#komodo_main[_hidechrome="true"][os-name="Windows_NT"][_sizemode="maximized"]
+{
+    #toolbox_main #main-toolboxrow-wrapper
+    {
+        /* For some reason windows seems to eat up approx 6 pixels of the window top */
+        padding-top: 10px;
+    }
+}
+
 #komodo_main[_hidechrome="true"]
 {
-    &:not([_sizemode="maximized"]) #toolbox_main #main-toolboxrow-wrapper,
-    &:not([sizemode="maximized"]) #toolbox_main #main-toolboxrow-wrapper
+    &:not([sizemode="maximized"]):not([_sizemode="maximized"]) #toolbox_main #main-toolboxrow-wrapper
     {
         padding-top: 0;
     }
