UI: Hide chrome for detached panes too
(integrated from master branch change 9.2.1-1529-g0be9ece by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/bindings.less
+++ b/src/chrome/komodo/skin/global/bindings.less
@@ -3,7 +3,8 @@
   -moz-binding: url("chrome://komodo/content/bindings/windows.xml#root-element");
 }
 
-window:not(#komodo_main):not(.embedded).dialog
+window:not(#komodo_main):not(.embedded).dialog,
+window#floating-pane
 {
   -moz-binding: url("chrome://komodo/content/bindings/windows.xml#window-chromeless");
 }
