UI: Find frame: Add UI for closing the frame
(integrated from master branch change 9.2.1-1531-gc773edd by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/dialogs/find2.less
+++ b/src/chrome/komodo/skin/dialogs/find2.less
@@ -7,7 +7,19 @@
 
 #find-box-wrap
 {
-    padding: 6px;
+    padding: 0 6px 6px 6px;
+}
+
+#find-box-closer
+{
+    height: 6px;
+
+    cursor: s-resize;
+    
+    &:hover
+    {
+        box-shadow: inset 0px 4px 0px 0px @border;
+    }
 }
 
 /* Todo: Remove this custom styling globally */
