UI: Fix odd indentation on tree items
(integrated from master branch change 9.2.1-1534-gba89e1e by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/prefs/pref-window.less
+++ b/src/chrome/komodo/skin/prefs/pref-window.less
@@ -23,6 +23,7 @@
 
     treechildren::-moz-tree-cell-text
     {
+        padding-left: 14px;
     }
     
     treechildren::-moz-tree-cell-text(child-row)
