UX: bring back panel close button fixes #1347
(integrated from master branch change 9.2.1-1529-g85ef87c by Carey Hoffman <cgchoffman@mail.com>)

--- a/src/chrome/komodo/skin/global/main.less
+++ b/src/chrome/komodo/skin/global/main.less
@@ -415,7 +415,7 @@ ko-pane:not([customizing]) .pane-drop-target
 .pane-container tabs .tabstrip-box 
 {
     /* Don't show buttons on pane tab bar */
-    & > toolbarbutton
+    & > toolbarbutton:not([anonid="panel-close-button"])
     {
         visibility: collapse;
     }
