--- a/src/chrome/komodo/skin/global/icons.less
+++ b/src/chrome/komodo/skin/global/icons.less
@@ -289,7 +289,7 @@ tab[widget^="klint_tabpanel"] { .icon(); .icon-circle-code(); }
 }
 
 .tab-close-button > .toolbarbutton-icon,
-.tabs-closebutton
+.tabs-closebutton:not([anonid="panel-close-button"])
 {
     visibility: collapse;
     display: none;
@@ -307,7 +307,8 @@ tab[widget^="klint_tabpanel"] { .icon(); .icon-circle-code(); }
 }
 
 .tab-close-button,
-.file-close-button
+.file-close-button,
+.tabs-closebutton
 {
     .icon();
     .icon-cross3();
