UI: Limit tree image size so it doesnt get bloated on retina
(integrated from master branch change 9.2.1-1542-g5c0725b by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/icons.less
+++ b/src/chrome/komodo/skin/global/icons.less
@@ -395,6 +395,12 @@ treechildren::-moz-tree-twisty
     height: 14px;
 }
 
+treechildren::-moz-tree-image
+{
+    max-width: 14px;
+    max-height: 14px;
+}
+
 treechildren::-moz-tree-twisty {
     list-style-image: none !important;
     background-image: url("koicon://ko-svg/chrome/komodo/skin/images/trees/twisty-right.svg?size=14&color=@{escaped-icons}");
