UI: Indicate "checked" toolbar buttons
(integrated from master branch change 9.2.1-1543-ga08088b by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/main.less
+++ b/src/chrome/komodo/skin/global/main.less
@@ -60,6 +60,11 @@
             {
                 background: darken(@contrast-special, 10%);
             }
+            
+            &[checked="true"]
+            {
+                background: darken(@contrast-special, 10%);
+            }
         }
     }
     
