UI: Don't show close button for side panes
(integrated from master branch change 9.2.1-1544-g9564ace by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/main.less
+++ b/src/chrome/komodo/skin/global/main.less
@@ -437,6 +437,15 @@ ko-pane[type="icons"] tab
     }
 }
 
+#workspace_left_area
+#workspace_right_area
+{
+    .tabs-closebutton
+    {
+        visibility: collapse;
+    }
+}
+
 #workspace_left_area:not([type="icons"]) tab:before,
 #workspace_right_area:not([type="icons"]) tab:before
 {
