Recent Projects: remove unecessary file icon
(integrated from master branch change 329f4ca by Carey Hoffman <cgchoffman@mail.com>)

--- a/src/chrome/komodo/skin/global/main.less
+++ b/src/chrome/komodo/skin/global/main.less
@@ -548,4 +548,11 @@ vbox[anonid="quickstart"] .inner > button
     display: none;
 }        
 
+/* New Tab */
+#popup_mruProjectsQL .menu-file-status-image-box
+}
+    display: none;
+    visibility: collapse;
+}
+
 }
