UI: Set classic toolbar layout when hiding the notification box
(integrated from master branch change 9.2.1-1554-gf1b251d by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/classic.toolbar.less
+++ b/src/chrome/komodo/skin/global/classic.toolbar.less
@@ -12,6 +12,7 @@
         -moz-box-ordinal-group: 1;
         width: auto !important;
         -moz-binding: unset !important;
+        -moz-box-flex: 1;
         
         spacer
         {
