UI: Don't limit toolbar button widths - fixes #1380
(integrated from master branch change 9.2.1-1563-gf8f1c6a by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/main.less
+++ b/src/chrome/komodo/skin/global/main.less
@@ -50,7 +50,7 @@
         & > toolbarbutton,
         .toolbaritem > toolbarbutton
         {
-            width: 18px;
+            min-width: 18px;
             margin: 0;
             padding: 5px;
             border-radius: 1px;
