UI: Fix syntax error in main.less

--- a/src/chrome/komodo/skin/global/main.less
+++ b/src/chrome/komodo/skin/global/main.less
@@ -550,7 +550,7 @@ vbox[anonid="quickstart"] .inner > button
 
 /* New Tab */
 #popup_mruProjectsQL .menu-file-status-image-box
-}
+{
     display: none;
     visibility: collapse;
 }
