UI: Tone down the statusbar label colors
(integrated from master branch change 9.2.1-1565-gc086c0e by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/main.less
+++ b/src/chrome/komodo/skin/global/main.less
@@ -343,6 +343,12 @@ statusbar
         margin: 2px;
         padding: 3px;
     }
+    
+    statusbarpanel > label,
+    .toolbarbutton-text
+    {
+        opacity: 0.6;
+    }
 }
 
 /* View Spliter */
