UI: Fix up update dialog appearance - fixes #1401
(integrated from master branch change 9.2.1-1577-g915c0f7 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/wizard.less
+++ b/src/chrome/komodo/skin/global/wizard.less
@@ -50,7 +50,29 @@ wizard:root
     }
 }
 
+.wizard-buttons,
+.wizard-buttons button
+{
+    -moz-appearance: none;
+}
+
 #startup-wizard
 {
     max-width: 600px;
+}
+
+wizard#updates
+{
+    
+    #licenseContent,
+    #historyItems,
+    {
+        -moz-appearance: none !important;
+    }
+    
+    .update-type
+    {
+        color: @foreground !important;
+    }
+    
 }
