--- a/src/chrome/komodo/skin/global/normalize.less
+++ b/src/chrome/komodo/skin/global/normalize.less
@@ -4,7 +4,8 @@
     font: message-box;
 }
 
-.link
+.link,
+.text-link
 {
     cursor: pointer;
     color: @secondary-special;
@@ -59,6 +60,11 @@ caption
         font-weight: bold;
         padding: 5px 0;
     }
+}
+
+progressmeter
+{
+    -moz-appearance: progressbar;
 }
 
 ul
