UX: Enable close button on notifications
(integrated from master branch change 9.2.1-1604-gc73466a by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/icons.less
+++ b/src/chrome/komodo/skin/global/icons.less
@@ -306,6 +306,7 @@ tab[widget^="klint_tabpanel"] { .icon(); .icon-circle-code(); }
     }
 }
 
+notificationbox .close-icon,
 .tab-close-button,
 .file-close-button,
 .tabs-closebutton
