UX: Add option to place statusbar below the editor
(integrated from master branch change 9.2.1-1605-gc99998e by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/main.less
+++ b/src/chrome/komodo/skin/global/main.less
@@ -345,9 +345,27 @@ statusbar
     }
     
     statusbarpanel > label,
-    .toolbarbutton-text
+    .toolbarbutton-text,
+    label[anonid="section-label"]
     {
         opacity: 0.6;
+    }
+}
+
+&[classic-statusbar="true"]
+{
+    view[type="editor"] scintilla
+    {
+        -moz-box-ordinal-group: 1;
+    }
+    
+    statusbar
+    {
+        -moz-box-ordinal-group: 2;
+        border-top: 1px solid @background;
+        padding-bottom: 0;
+        border-bottom: 0;
+        height: 30px;
     }
 }
 
