Breadcrumbs: Clean up bad merge

--- a/src/modules/breadcrumbs/skin/breadcrumbs.less
+++ b/src/modules/breadcrumbs/skin/breadcrumbs.less
@@ -119,6 +119,14 @@
             }
         }
     }
+
+    sectionlist
+    {
+        image[anonid="section-arrows"]
+        {
+            visibility: collapse;
+        }
+    }
 }
 
 [anonid="statusbar-message-deck-default"]
