UI: Remove escaped-icons var, it's succeeded by icon sdk params - fixes #1436
(integrated from master branch change 9.2.1-1613-gc0a805a by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/components/customize.less
+++ b/src/chrome/komodo/skin/global/components/customize.less
@@ -18,7 +18,7 @@ ko-pane .pane-empty-container description
 /* Draggable Widget */
 ko-pane:not([ko-pane-drag-status]) .pane-drop-placeholders > :not(splitter)
 {
-    background-image: url("koicon://ko-svg/chrome/icomoon/skin/move.svg?size=48&color=@{escaped-special}");
+    background-image: url("koicon://ko-svg/chrome/icomoon/skin/move.svg?size=48&scheme-name=interface&scheme-color=special");
     background-position: center;
     background-repeat: no-repeat;
     border: 2px dashed @border;
@@ -34,7 +34,7 @@ ko-pane:not([ko-pane-drag-status]) .pane-drop-placeholders > :not(splitter)
 /* Drop Area */
 ko-pane[ko-pane-drag-status] .pane-drop-placeholders
 {
-    background-image: url("koicon://ko-svg/chrome/icomoon/skin/download3.svg?size=48&color=@{escaped-special}");
+    background-image: url("koicon://ko-svg/chrome/icomoon/skin/download3.svg?size=48&scheme-name=interface&scheme-color=special");
     background-position: center;
     background-repeat: no-repeat;
     margin: 2px;
