--- a/src/chrome/komodo/skin/prefs/pref-window.less
+++ b/src/chrome/komodo/skin/prefs/pref-window.less
@@ -41,152 +41,152 @@
 
     treechildren::-moz-tree-cell(uiSettingsItem)
     {
-        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/eye.svg?size=16&color=@{escaped-icons}");
+        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/eye.svg?size=16");
     }
 
     treechildren::-moz-tree-cell(codeIntelItem)
     {
-        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/info-circle.svg?size=16&color=@{escaped-icons}");
+        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/info-circle.svg?size=16");
     }
 
     treechildren::-moz-tree-cell(fontsItem)
     {
-        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/paint-brush.svg?size=16&color=@{escaped-icons}");
+        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/paint-brush.svg?size=16");
     }
 
     treechildren::-moz-tree-cell(debuggerItem)
     {
-        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/play.svg?size=16&color=@{escaped-icons}");
+        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/play.svg?size=16");
     }
 
     treechildren::-moz-tree-cell(editorItem)
     {
-        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/code.svg?size=16&color=@{escaped-icons}");
+        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/code.svg?size=16");
     }
 
     treechildren::-moz-tree-cell(environItem)
     {
-        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/cog.svg?size=16&color=@{escaped-icons}");
+        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/cog.svg?size=16");
     }
 
     treechildren::-moz-tree-cell(associationsItem)
     {
-        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/clone.svg?size=16&color=@{escaped-icons}");
+        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/clone.svg?size=16");
     }
 
     treechildren::-moz-tree-cell(findItem)
     {
-        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/binoculars.svg?size=16&color=@{escaped-icons}");
+        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/binoculars.svg?size=16");
     }
 
     treechildren::-moz-tree-cell(ishellItem)
     {
-        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/terminal.svg?size=16&color=@{escaped-icons}");
+        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/terminal.svg?size=16");
     }
 
     treechildren::-moz-tree-cell(internationalItem)
     {
-        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/cny.svg?size=16&color=@{escaped-icons}");
+        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/cny.svg?size=16");
     }
 
     treechildren::-moz-tree-cell(editKeys)
     {
-        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/keyboard-o.svg?size=16&color=@{escaped-icons}");
+        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/keyboard-o.svg?size=16");
     }
 
     treechildren::-moz-tree-cell(helpItem)
     {
-        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/question-circle.svg?size=16&color=@{escaped-icons}");
+        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/question-circle.svg?size=16");
     }
 
     treechildren::-moz-tree-cell(languagesItem)
     {
-        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/language.svg?size=16&color=@{escaped-icons}");
+        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/language.svg?size=16");
     }
 
     treechildren::-moz-tree-cell(mappedURIsItem)
     {
-        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/chain.svg?size=16&color=@{escaped-icons}");
+        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/chain.svg?size=16");
     }
 
     treechildren::-moz-tree-cell(newFilesItem)
     {
-        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/file-text.svg?size=16&color=@{escaped-icons}");
+        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/file-text.svg?size=16");
     }
 
     treechildren::-moz-tree-cell(editSaveItem)
     {
-        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/floppy-o.svg?size=16&color=@{escaped-icons}");
+        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/floppy-o.svg?size=16");
     }
 
     treechildren::-moz-tree-cell(printItem)
     {
-        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/print.svg?size=16&color=@{escaped-icons}");
+        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/print.svg?size=16");
     }
 
     treechildren::-moz-tree-cell(serversItem)
     {
-        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/server.svg?size=16&color=@{escaped-icons}");
+        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/server.svg?size=16");
     }
 
     treechildren::-moz-tree-cell(sharedSupportItem)
     {
-        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/share-alt.svg?size=16&color=@{escaped-icons}");
+        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/share-alt.svg?size=16");
     }
 
     treechildren::-moz-tree-cell(sourceCodeControlItem)
     {
-        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/database.svg?size=16&color=@{escaped-icons}");
+        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/database.svg?size=16");
     }
 
     treechildren::-moz-tree-cell(syntaxCheckingItem)
     {
-        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/check-circle.svg?size=16&color=@{escaped-icons}");
+        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/check-circle.svg?size=16");
     }
 
     treechildren::-moz-tree-cell(testPlanItem)
     {
-        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/tasks.svg?size=16&color=@{escaped-icons}");
+        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/tasks.svg?size=16");
     }
 
     treechildren::-moz-tree-cell(webItem)
     {
-        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/globe.svg?size=16&color=@{escaped-icons}");
+        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/globe.svg?size=16");
     }
 
     treechildren::-moz-tree-cell(projectsItem)
     {
-        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/suitcase.svg?size=16&color=@{escaped-icons}");
+        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/suitcase.svg?size=16");
     }
 
     treechildren::-moz-tree-cell(windowsIntegrationItem)
     {
-        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/windows.svg?size=16&color=@{escaped-icons}");
+        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/windows.svg?size=16");
     }
 
     treechildren::-moz-tree-cell(commandoItem)
     {
-        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/map-pin.svg?size=16&color=@{escaped-icons}");
+        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/map-pin.svg?size=16");
     }
 
     treechildren::-moz-tree-cell(placesPref)
     {
-        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/folder-open.svg?size=16&color=@{escaped-icons}");
+        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/folder-open.svg?size=16");
     }
 
     treechildren::-moz-tree-cell(httpInspectorItem)
     {
-        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/map-signs.svg?size=16&color=@{escaped-icons}");
+        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/map-signs.svg?size=16");
     }
 
     treechildren::-moz-tree-cell(prefs_formatter_treeitem)
     {
-        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/font.svg?size=16&color=@{escaped-icons}");
+        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/font.svg?size=16");
     }
 
     treechildren::-moz-tree-cell(notifyItem)
     {
-        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/exclamation-circle.svg?size=16&color=@{escaped-icons}");
+        background-image: url("koicon://ko-svg/chrome/fontawesome/skin/exclamation-circle.svg?size=16");
     }
 
 }
