UI: Add missing angular and go icons
(integrated from master branch change 9.2.1-1623-g184d2b9 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/components/languages.less
+++ b/src/chrome/komodo/skin/global/components/languages.less
@@ -7,6 +7,10 @@ treechildren::-moz-tree-image(DefaultLanguage) {
   list-style-image: url("koicon://ko-language/Text");
 }
 
+.languageicon[language="AngularJS"],
+treechildren::-moz-tree-image(LanguageAngularJS) {
+  list-style-image: url("koicon://ko-language/AngularJS") !important;
+}
 .languageicon[language="ActionScript"],
 treechildren::-moz-tree-image(LanguageActionScript) {
   list-style-image: url("koicon://ko-language/ActionScript") !important;
@@ -35,6 +39,10 @@ treechildren::-moz-tree-image(LanguageEJS) {
 treechildren::-moz-tree-image(LanguageepMojo) {
   list-style-image: url("koicon://ko-language/epMojo");
 }
+.languageicon[language="Go"],
+treechildren::-moz-tree-image(LanguageGo) {
+  list-style-image: url("koicon://ko-language/Go") !important;
+}
 .languageicon[language="HTML"],
 treechildren::-moz-tree-image(LanguageHTML) {
   list-style-image: url("koicon://ko-language/HTML");
@@ -60,6 +68,10 @@ treechildren::-moz-tree-image(LanguageLaravelBlade) {
 .languageicon[language="Less"],
 treechildren::-moz-tree-image(LanguageLess) {
   list-style-image: url("koicon://ko-language/Less");
+}
+.languageicon[language="Markdown"],
+treechildren::-moz-tree-image(LanguageMarkdown) {
+  list-style-image: url("koicon://ko-language/Markdown") !important;
 }
 .languageicon[language="MXML"],
 treechildren::-moz-tree-image(LanguageMXML) {
