UI: Fix close button still showing on side panes
(integrated from master branch change 9.2.1-1624-g7e0dbe1 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/main.less
+++ b/src/chrome/komodo/skin/global/main.less
@@ -461,7 +461,7 @@ ko-pane[type="icons"] tab
     }
 }
 
-#workspace_left_area
+#workspace_left_area,
 #workspace_right_area
 {
     .tabs-closebutton
