--- a/src/chrome/komodo/skin/global/icons.less
+++ b/src/chrome/komodo/skin/global/icons.less
@@ -127,6 +127,7 @@ button, toolbarbutton, menuitem, tab
 .goback-icon{.icon(); .icon-arrow-left(); margin-right: 6px; }
 .goforward-icon{.icon(); .icon-arrow-right(); margin-right: 6px; }
 .columns-icon { .icon(); .icon-columns(); }
+.find-copy-icon{ .icon(); .icon-files-empty2();}
 
 // Work around to space out icons from their text or neighbours
 // Add any new icons that require spacing this section so we
